Fix overflow-x on Safari.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
-html {
-  overflow-x: hidden;
-}
+// html {
+//   overflow-x: hidden;
+// }
 
 * {
   font-family: "Noto Serif JP", serif;
